[package]
name = "protocol-controller"
version = "1.0.0"
description = "usdtx coordination"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "protocol_controller"

[features]
no-entrypoint = []
test-bpf = []
default = []

[dependencies]
pinocchio = { workspace = true }
pinocchio-token = { workspace = true }
pinocchio-system = { workspace = true }
pinocchio-associated-token-account = { workspace = true }
pinocchio-log = { workspace = true }
solana-program = { workspace = true }
spl-token = { workspace = true }
spl-associated-token-account = { workspace = true }
spl-math = { workspace = true }
borsh = { workspace = true }
bytemuck = { workspace = true, features = ["derive"] }
num-traits = { workspace = true }
thiserror = { workspace = true }
solana-clock = { workspace = true }
solana-security-txt = { workspace = true }
usdtx-token = { path = "../usdtx-token", features = ["no-entrypoint"] }
thaler-token = { path = "../thaler-token", features = ["no-entrypoint"] }
sol-strategy-manager = { path = "../sol-strategy-manager", features = ["no-entrypoint"] }
usdc-strategy-manager = { path = "../usdc-strategy-manager", features = ["no-entrypoint"] }
magicblock-controller = { path = "../magicblock-controller", features = ["no-entrypoint"] }

[dev-dependencies]
mollusk = { workspace = true, features = ["svm"] }
proptest = { workspace = true }
tokio = { workspace = true, features = ["full"] }
